# rustavel

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
app/: Cargo.toml  build.rs
app/src/: main.rs  rustavel.rs
app/src/http/controllers/: mod.rs  test_controller.rs  todo_controller.rs
app/src/http/middleware/: log_middleware.rs
app/src/models/: mod.rs  todo.rs  todo_generated.rs
app/src/routes/: api.rs  web.rs
artisan/: Cargo.toml
artisan/src/: artisan.rs  main.rs
artisan/src/general/: lib.rs
artisan/src/make/: make_error.rs  migration.rs  mod.rs  model.rs
artisan/src/make/templates/: migration.rs.j2  model.rs.j2  model_generated.rs.j2
artisan/src/utility/: ui.rs
core/: Cargo.toml
core/src/: lib.rs  routing.rs  schema.rs  state.rs  table.rs
core/src/config/: app.rs  database.rs  mod.rs
core/src/db/: mod.rs  schema.rs  table.rs
core/src/facades/: carbon.rs  datetime.rs  file.rs  file_content.rs  mod.rs  str.rs  terminal_ui.rs
core/src/http/: mod.rs  request.rs
core/src/localization/: digits.rs  mod.rs  numbers.rs
core/src/logger/: global.rs  message.rs  mod.rs  worker.rs
core/src/macros/: mod.rs  register_model.rs
core/src/mvc/: model.rs
core/src/sql/: database_client.rs  generator.rs  mod.rs  mysql.rs  query.rs  sqlite.rs
database/: Cargo.toml
database/src/: main.rs  migrator.rs
database/src/migrations/: m_2025_01_15_1945_create_todos.rs  m_2025_01_15_1945_create_users.rs  mod.rs
graveyard/: Cargo.toml
graveyard/src/: main.rs  request_validator.rs
macros/: Cargo.toml
macros-core/: Cargo.toml
macros-core/src/: lib.rs
macros/src/: lib.rs
macros/tests/: basic.rs
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/http/: mod.rs
src/app/http/controllers/: todo_controller.rs
src/app/http/requests/: mod.rs  todo_request.rs
src/app/models/: todo.rs
src/config/: app.rs  database.rs  mod.rs
src/core/: mod.rs  routing.rs  schema.rs  state.rs  table.rs
src/core/facades/: str.rs
src/core/logger/: global.rs  mod.rs  worker.rs
src/core/sql/: database_client.rs  generator.rs  mod.rs  mysql.rs  sqlite.rs
src/resources/views/: welcome.html
src/routes/: api.rs  web.rs
tests/: route_test.rs  schema_test.rs
