[package]
name = "inilara"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.49.0", features = ["full"] }
minijinja = { version = "1", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
axum-extra =  { version = "0.12.5" , features = ["routing" , "typed-routing"]  }
tower = "0.5.2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki","mysql","sqlite","postgres" ] }
once_cell = "1.21.3"

