[workspace]
members = [
    "app",
    "core",
    "artisan",
    "database",
#    "graveyard", # uncomment this workspace carfully this not for production
]
resolver = "2"

[workspace.dependencies]

axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
minijinja = { version = "1", features = ["loader"] }
dotenv = "0.15.0"
axum-extra = { version = "0.12.5", features = ["routing", "typed-routing"] }
tower = "0.5.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "mysql", "sqlite", "postgres","macros"] }
once_cell = "1.21.3"
async-trait = "0.1.89"
clap = { version = "4.5.56", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
jiff="0.2.18"
illuminate-string = { git = "https://github.com/RustNSparks/illuminate-string.git", branch = "main"}