[workspace]
members = [
    "app",
    "core",
    "artisan",
    "database",
    "macros", "macros-core",
    #    "graveyard", # uncomment this workspace carfully this not for production
]
resolver = "2"

[workspace.dependencies]

# ── Runtime / Async ───────────────────────────────
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"

# ── Web Framework / HTTP / FORM ──────────────────────────
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["routing", "typed-routing"] }
tower = "0.5.2" # middleware / layers
axum-params = "0.4"

# ── Templates / Views + Code genrate ─────────────────────────────
minijinja = { version = "1", features = ["loader"] } # Jinja-like templates

# ── Database / Persistence ────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "mysql", "sqlite", "postgres", "macros",  "time"] }

# ── Serialization / Data ──────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# ── CLI / Config ──────────────────────────────────
clap = { version = "4.5.56", features = ["derive"] }
dotenv = "0.15.0" # env loading (dev)

# ── Utilities / Glue ──────────────────────────────
once_cell = "1.21.3"     # lazy statics
async-trait = "0.1.89"   # async in traits

# ── Time / Date ───────────────────────────────────
time = { version = "0.3", features = ["macros", "parsing", "formatting", "local-offset", "serde"] } # modern time handling

# ── String and utilty  ─────────────────────────
regex = "1.12.2" # str
illuminate-string = { git = "https://github.com/RustNSparks/illuminate-string.git", branch = "main" } #str
rand = "0.8" #random

# ── Terminal / UX ─────────────────────────
colored = "2"
terminal_size = "0.3"
ansi-str = "0.9"
dialoguer = "0.12"

# ── Crypto / Security ─────────────────────
ring = "0.17"            # crypto + secure hash
crc32fast = "1.5"        # cheap integrity hash

# ── Encoding / Web ────────────────────────
data-encoding = "2.10"    # binary encodings
percent-encoding = "2.3" # URL encode/decode
