[package]
name = "rustavel-artisan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "artisan"
path = "src/artisan.rs"

[dependencies]
clap.workspace = true
dotenv.workspace = true
serde.workspace = true
minijinja.workspace = true
illuminate-string.workspace =  true
jiff.workspace =  true

colored = "2"
terminal_size = "0.3"
ansi-str="0.9"