[package]
name = "rustavel-artisan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "artisan"
path = "src/artisan.rs"

[dependencies]
rustavel-core = { path = "../core" }
clap.workspace = true
dotenv.workspace = true
serde.workspace = true
minijinja.workspace = true
illuminate-string.workspace =  true
jiff.workspace =  true
dialoguer.workspace = true