[package]
name = "rustavel-core"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio.workspace = true
dotenv.workspace = true
sqlx.workspace = true
once_cell.workspace = true
async-trait.workspace = true
axum.workspace = true
regex.workspace =  true
serde.workspace =  true
illuminate-string.workspace =  true
colored.workspace = true
terminal_size.workspace = true
ansi-str.workspace = true
futures.workspace = true
